--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.idleTimeout=5000
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.hikari.connection-init-sql=ALTER USER admin SET search_path to public
-spring.datasource.hikari.connection-test-query=select count(*)from US_States_Area_codes
+spring.datasource.hikari.connection-test-query=select count(*)from us_states_area_codes
 spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 spring.datasource.initialize=true
 spring.datasource.continueOnError=true
